# selixir

./: .clinerules  .gitignore  README.ja.md  README.md  pyproject.toml  pytest.ini
selixir/: __init__.py  driver.py  file.py  screenshot.py  scroll.py
tests/: test_driver.py  test_file.py  test_screenshot.py  test_scroll.py
