[project]
name = "selixir"
version = "0.1.2"
description = "A helpful utility wrapper for Selenium WebDriver."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "tbshiki", email = "info@tbshiki.com" }
]
keywords = ["selenium", "automation", "webdriver", "operation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
dependencies = [
    "selenium>=4.20.0",
    "webdriver-manager>=4.0.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["selixir"]

[project.urls]
"Homepage" = "https://github.com/tbshiki/selixir"
"Source" = "https://github.com/tbshiki/selixir"
"Bug Tracker" = "https://github.com/tbshiki/selixir/issues"

[tool.ruff]
line-length = 320
ignore = ["E402"]
